--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .cabecalho-menu-item {
-    font-family: 'Sarala';
+    font-family: 'Sarala', sans-serif;
     color: #FFF2E7;
     font-weight: 400;
     font-size: 18px;
@@ -40,3 +40,73 @@ body {
     margin-bottom: 48px;
     border-top: 0.4px solid #FFF2E7;
 }
+
+.conteudo-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.conteudo-principal-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.conteudo-principal-escrito-titulo {
+    font-family: 'Righteous', cursive; 
+    color: #FFF2E7;
+    font-weight: 400;
+    font-size: 64px;
+}
+
+.conteudo-principal-escrito-subtitulo {
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.conteudo-principal-escrito-botao {
+    background-color: #ECD6C4;
+    height: 60px;
+    width: 180px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: 'Sarala', sans-serif;
+    color: #2F2325;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.conteudo-principal-img {
+    height: 430px;
+}
+
+.conteudo-secundario {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 48px;
+}
+
+.conteudo-secundario-titulo {
+    border-top: 0.4px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive; 
+    color: #FFF2E7;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.conteudo-secundario-opcao {
+    font-family: 'Sarala', sans-serif; 
+    color: #ECD6C4;
+    font-weight: 400;
+    font-size: 18px;
+}
+
